[gd_scene load_steps=19 format=3 uid="uid://cq328re2r44m"]

[ext_resource type="Texture2D" uid="uid://sb8s52cbpafs" path="res://BoxingGame/boxingbagsprite.jpg" id="1_g3pup"]
[ext_resource type="Script" path="res://SkillCheck.gd" id="3_5idga"]
[ext_resource type="Texture2D" uid="uid://dwktwom5rtvyl" path="res://BoxingGame/puncheffect.png" id="4_pjnkb"]
[ext_resource type="Texture2D" uid="uid://bhumajjl1f8sj" path="res://BoxingGame/red.png" id="5_kvsgw"]
[ext_resource type="Texture2D" uid="uid://bwew1s2ccgteq" path="res://BoxingGame/blackbar.png" id="6_kob4j"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8kmtd"]
radius = 85.0159
height = 380.204

[sub_resource type="AtlasTexture" id="AtlasTexture_5dan2"]
atlas = ExtResource("4_pjnkb")
region = Rect2(0, 0, 71, 71)

[sub_resource type="AtlasTexture" id="AtlasTexture_umybr"]
atlas = ExtResource("4_pjnkb")
region = Rect2(71, 0, 71, 71)

[sub_resource type="AtlasTexture" id="AtlasTexture_ckp6l"]
atlas = ExtResource("4_pjnkb")
region = Rect2(142, 0, 71, 71)

[sub_resource type="AtlasTexture" id="AtlasTexture_1bkw1"]
atlas = ExtResource("4_pjnkb")
region = Rect2(213, 0, 71, 71)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5oj1"]
atlas = ExtResource("4_pjnkb")
region = Rect2(284, 0, 71, 71)

[sub_resource type="AtlasTexture" id="AtlasTexture_mux2m"]
atlas = ExtResource("4_pjnkb")
region = Rect2(0, 71, 71, 71)

[sub_resource type="AtlasTexture" id="AtlasTexture_1laih"]
atlas = ExtResource("4_pjnkb")
region = Rect2(71, 71, 71, 71)

[sub_resource type="AtlasTexture" id="AtlasTexture_nypyl"]
atlas = ExtResource("4_pjnkb")
region = Rect2(142, 71, 71, 71)

[sub_resource type="AtlasTexture" id="AtlasTexture_f8kg2"]
atlas = ExtResource("4_pjnkb")
region = Rect2(213, 71, 71, 71)

[sub_resource type="AtlasTexture" id="AtlasTexture_2wurl"]
atlas = ExtResource("4_pjnkb")
region = Rect2(284, 71, 71, 71)

[sub_resource type="SpriteFrames" id="SpriteFrames_p8txx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5dan2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_umybr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ckp6l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1bkw1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5oj1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mux2m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1laih")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nypyl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f8kg2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2wurl")
}],
"loop": false,
"name": &"effect",
"speed": 18.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m4eom"]
size = Vector2(186.595, 297.603)

[node name="Node2D" type="Node2D"]

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -2.0
offset_right = 606.0
offset_bottom = 304.0

[node name="ColorRect" type="ColorRect" parent="ColorRect"]
layout_mode = 0
offset_left = 302.0
offset_right = 609.0
offset_bottom = 305.0
color = Color(0.639216, 0.14902, 0.203922, 1)

[node name="PunchingBag" type="Sprite2D" parent="."]
position = Vector2(157, 126)
scale = Vector2(0.508013, 0.465812)
texture = ExtResource("1_g3pup")

[node name="StaticBody2D" type="StaticBody2D" parent="PunchingBag"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PunchingBag/StaticBody2D"]
visible = false
position = Vector2(0.825397, 50.654)
shape = SubResource("CapsuleShape2D_8kmtd")

[node name="SkillCheck" type="Area2D" parent="."]
script = ExtResource("3_5idga")

[node name="puncheffect" type="AnimatedSprite2D" parent="SkillCheck"]
visible = false
position = Vector2(144, 122)
sprite_frames = SubResource("SpriteFrames_p8txx")
animation = &"effect"
frame = 9
frame_progress = 0.313251

[node name="ProgressBar" type="ProgressBar" parent="SkillCheck"]
modulate = Color(0.639216, 0.14902, 0.203922, 1)
offset_left = 24.0
offset_top = 74.0
offset_right = 53.0
offset_bottom = 226.0
max_value = 10.0
step = 1.0
fill_mode = 3
show_percentage = false

[node name="Moving" type="Sprite2D" parent="SkillCheck"]
top_level = true
position = Vector2(248, 280)
scale = Vector2(0.0292969, 0.144531)
texture = ExtResource("5_kvsgw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SkillCheck"]
visible = false
position = Vector2(84.5, 285)
scale = Vector2(0.0911065, 0.073924)
shape = SubResource("RectangleShape2D_m4eom")

[node name="Bar" type="Sprite2D" parent="SkillCheck"]
position = Vector2(164, 284)
scale = Vector2(0.226563, 0.0749511)
texture = ExtResource("6_kob4j")

[node name="matchup" type="Sprite2D" parent="SkillCheck"]
position = Vector2(100, 280)
scale = Vector2(0.102564, 0.0706319)
texture = ExtResource("1_g3pup")

[node name="RedGuy" type="Sprite2D" parent="."]
position = Vector2(364, 64)
scale = Vector2(0.101563, 0.257813)
texture = ExtResource("6_kob4j")

[node name="dialogueBox" type="Sprite2D" parent="RedGuy"]
position = Vector2(1452.31, 64.0001)
scale = Vector2(1.99038, 1.125)
texture = ExtResource("6_kob4j")

[node name="RedGuy2" type="Sprite2D" parent="."]
visible = false
position = Vector2(364, 157)
scale = Vector2(0.101563, 0.257813)
texture = ExtResource("6_kob4j")

[node name="dialogueBox" type="Sprite2D" parent="RedGuy2"]
position = Vector2(1452.31, 64.0001)
scale = Vector2(1.99038, 1.125)
texture = ExtResource("6_kob4j")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="line1" type="TextEdit" parent="CanvasLayer"]
offset_left = 432.0
offset_top = 45.0
offset_right = 591.0
offset_bottom = 112.0
text = "Punch this 4 me
"

[node name="line2" type="TextEdit" parent="CanvasLayer"]
visible = false
offset_left = 433.0
offset_top = 136.0
offset_right = 592.0
offset_bottom = 203.0
text = "I feel better now"

[connection signal="animation_finished" from="SkillCheck/puncheffect" to="SkillCheck" method="_on_puncheffect_animation_finished"]
